@@ -1080,3 +1080,8 @@ swt.update.window.status.restartMaybeNeeded=Restart may be required
 ConfigView.pluginlist.shared=shared
 PeersView.host=Host Name
 PeersView.host.info=The host name of the peer, where available (may affect performance)
+MainWindow.menu.help.whatsnew=What's new
+ConfigView.label.checkonstart=Check for latest version when Azureus starts
+ConfigView.label.periodiccheck=Check for latest version periodically
+ConfigView.label.opendialog=Automatically open the Update Assistant when an update is available
+MainWindow.updateavail=(Update Available)
